--- a/index.html
+++ b/index.html
@@ -1,68 +1,232 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Web Walkie-Talkie</title>
-  <style>
-    :root { font-family: system-ui, Arial, sans-serif; }
-    body { margin: 0; background:#0f1115; color:#e8e8ea; display:flex; min-height:100vh; }
-    .card { margin:auto; width: min(560px, 92vw); background:#171922; border:1px solid #262938; border-radius:16px; padding:22px; box-shadow: 0 12px 40px rgba(0,0,0,.35);}
-    h1 { margin:0 0 8px; font-size:1.4rem; }
-    p.sub { margin:0 0 18px; color:#9aa0ac; }
-    .row { display:flex; gap:10px; margin: 10px 0 16px; }
-    input, button { border-radius:10px; border:1px solid #2a2f3f; background:#0f1115; color:#e8e8ea; padding:12px 14px; font-size:14px; }
-    input { flex:1; outline:none; }
-    button { cursor:pointer; }
-    button:disabled { opacity:.6; cursor:not-allowed; }
-    .status { margin:10px 0 0; font-size:14px; color:#9bd; }
-    .ptt { width:100%; padding:18px; font-size:16px; border:2px dashed #39405a; background:#131723; }
-    .ptt.talking { background:#173019; border-color:#2c6e34; }
-    .bad { color:#ff9b9b; }
-    .hint { color:#9aa0ac; font-size:12px; margin-top:8px; }
-    .pill { display:inline-block; padding:4px 10px; border-radius:999px; border:1px solid #2a2f3f; margin-right:6px; font-size:12px; color:#cbd3ff;}
-    footer { margin-top:14px; color:#788; font-size:12px; }
-  </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Walkie-Talkie</title>
+<style>
+:root{
+  --shell:#14161c;
+  --shell-hi:#1b1f28;
+  --glass:#0f1220;
+  --screen:#0b0e19;
+  --text:#e9ecf3;
+  --muted:#9aa4b6;
+  --accent:#4cc2ff;
+  --ok:#49c56b;
+  --err:#ff8b8b;
+  --ptt:#e24646;
+  --ptt-d:#b02f2f;
+}
+html,body{
+  height:100%; margin:0;
+  background:radial-gradient(1200px 800px at 70% 10%, #0a0c12 0%, #05070b 60%, #030408 100%);
+  color:var(--text);
+  font-family:system-ui,Segoe UI,Arial,sans-serif;
+}
+.stage{
+  min-height:100%;
+  display:flex; align-items:center; justify-content:center;
+  padding:24px;
+}
+/* DEVICE SHELL */
+.device{
+  position:relative;
+  width:min(360px, 92vw);
+  aspect-ratio: 9 / 16;
+  background:linear-gradient(160deg,var(--shell-hi),var(--shell));
+  border-radius:28px;
+  box-shadow:
+    inset 0 2px 0 rgba(255,255,255,0.03),
+    inset 0 -10px 22px rgba(0,0,0,0.55),
+    0 20px 80px rgba(0,0,0,0.7);
+  border:1px solid #1f2330;
+  display:grid;
+  grid-template-rows: 74px 1fr 130px;
+  overflow:hidden;
+}
+/* Antenna */
+.antenna{
+  position:absolute; top:-42px; left:26px; width:16px; height:48px;
+  background:linear-gradient(180deg,#303645,#1e2331);
+  border-radius:8px 8px 2px 2px; border:1px solid #2a2f3f;
+  box-shadow:0 8px 16px rgba(0,0,0,0.5);
+}
+/* Speaker grill */
+.head{ position:relative; padding:14px 18px 4px 18px; }
+.grill{
+  height:42px; border-radius:10px; background:linear-gradient(180deg,#1a1e2a,#0e1017);
+  border:1px solid #1f2433; box-shadow:inset 0 -8px 16px rgba(0,0,0,0.6), inset 0 1px 0 rgba(255,255,255,.03);
+  display:grid; align-content:center; padding:0 14px; gap:6px;
+}
+.grill .row{display:flex; gap:8px}
+.grill .dot{height:4px;width:4px;background:#0b0e16;border-radius:50%;box-shadow:0 0 0 1px #121624;}
+/* Engraved badge */
+.engrave{
+  position:absolute;
+  left:0; right:0;
+  top:66px; /* just under grill */
+  display:flex; justify-content:center;
+  z-index:4;
+  pointer-events:none;
+}
+.engrave span{
+  font-weight:800; letter-spacing:2px; font-size:12px;
+  color:transparent;
+  background:linear-gradient(180deg, rgba(255,255,255,.18), rgba(0,0,0,.78));
+  -webkit-background-clip:text; background-clip:text;
+  text-shadow:
+    0 1px 0 rgba(255,255,255,0.10),
+    0 -1px 0 rgba(0,0,0,0.6);
+  filter: drop-shadow(0 1px 0 rgba(255,255,255,0.05));
+  opacity:.75;
+}
+/* Screen */
+.screen-wrap{padding:10px 18px}
+.screen{
+  position:relative; height:100%;
+  background:radial-gradient(140% 120% at 50% -20%, #12162a 0%, var(--glass) 45%, #0c1022 100%);
+  border:1px solid #2a3146; border-radius:16px; overflow:hidden;
+  box-shadow:inset 0 0 40px rgba(0,0,0,.8), inset 0 1px 0 rgba(255,255,255,.04);
+  display:grid; grid-template-rows: 30px 1fr 30px;
+}
+.statusbar{
+  display:flex; align-items:center; justify-content:space-between;
+  padding:6px 10px; font-size:12px; color:#cfe3ff;
+}
+.pill{
+  display:inline-flex; align-items:center; gap:6px;
+  border:1px solid #35405b; padding:2px 8px;
+  border-radius:999px; font-size:11px;
+}
+.lcd{
+  padding:12px; display:grid; gap:10px; align-content:start; overflow:auto;
+  color:#dfe6ff; text-shadow:0 0 12px rgba(100,150,255,.12);
+  font-size:14px;
+}
+.lcd .hint{color:var(--muted); font-size:12px}
+.field{display:flex; gap:8px}
+.lcd input, .lcd button{
+  border-radius:10px; border:1px solid #35405b; background:#0e1222; color:var(--text);
+  padding:10px 12px; font-size:13px; outline:none;
+}
+.lcd input{flex:1; min-width:0}
+.lcd button{cursor:pointer}
+.lcd button:disabled{opacity:.6; cursor:not-allowed}
+.softkeys{display:flex; gap:8px}
+#status{color:#9bd; font-size:12px}
+#who{color:#cbd9ff; font-size:12px}
+#errors{color:var(--err); font-size:12px}
+/* Bottom control area with big 3D PTT */
+.keys{
+  position:relative; padding:14px 18px 18px;
+  display:grid; align-items:center;
+}
+#pttBtn{
+  display:block;
+  margin:auto;
+  height:96px; width:96px;
+  border-radius:50%;
+  background: radial-gradient(circle at 30% 30%, var(--ptt), var(--ptt-d));
+  border:3px solid #6f1e1e;
+  box-shadow:
+    inset 0 4px 8px rgba(255,255,255,0.15),
+    inset 0 -8px 12px rgba(0,0,0,0.45),
+    0 10px 22px rgba(0,0,0,0.55);
+  font-weight:800; letter-spacing:.6px;
+  font-size:16px; color:#fff;
+  cursor:pointer;
+  transition:transform .08s ease, box-shadow .08s ease, background .15s ease;
+}
+#pttBtn:active{
+  transform: translateY(2px);
+  box-shadow:
+    inset 0 2px 4px rgba(255,255,255,0.12),
+    inset 0 -4px 8px rgba(0,0,0,0.55),
+    0 4px 10px rgba(0,0,0,0.5);
+}
+#pttBtn.talking{
+  background: radial-gradient(circle at 30% 30%, #4fc463, #2c7f39);
+  border-color:#205a2b;
+  box-shadow:
+    inset 0 4px 8px rgba(255,255,255,0.15),
+    inset 0 -8px 12px rgba(0,0,0,0.45),
+    0 10px 22px rgba(73,197,107,.25);
+}
+#pttBtn:disabled{opacity:.65; cursor:not-allowed}
+.ptt-label{margin-top:8px; text-align:center; font-size:11px; color:#b7bdcb; opacity:.8}
+/* Screws */
+.screw{position:absolute; width:10px; height:10px; border-radius:50%; background:#0e1118; border:1px solid #242a3a; box-shadow:inset 0 2px 4px rgba(0,0,0,.5)}
+.s1{top:10px; left:10px} .s2{top:10px; right:10px} .s3{bottom:10px; left:10px} .s4{bottom:10px; right:10px}
+/* Subtle scrollbar */
+.lcd::-webkit-scrollbar{height:8px;width:8px}
+.lcd::-webkit-scrollbar-thumb{background:#2a3146;border-radius:8px}
+</style>
 
-  <!-- Firebase SDKs -->
-  <script defer src="https://www.gstatic.com/firebasejs/10.12.3/firebase-app-compat.js"></script>
-  <script defer src="https://www.gstatic.com/firebasejs/10.12.3/firebase-firestore-compat.js"></script>
-
-  <!-- Your Firebase config (edit this file) -->
-  <script defer src="./firebase-config.js"></script>
-  <!-- App logic -->
-  <script defer src="./app.js"></script>
+<!-- Firebase SDKs -->
+<script defer src="https://www.gstatic.com/firebasejs/10.12.3/firebase-app-compat.js"></script>
+<script defer src="https://www.gstatic.com/firebasejs/10.12.3/firebase-firestore-compat.js"></script>
+<script defer src="./firebase-config.js"></script>
+<script defer src="./app.js"></script>
 </head>
 <body>
-  <div class="card">
-    <h1>Web Walkie‑Talkie</h1>
-    <p class="sub">Push‑to‑talk voice chat for two people. Share a room code and press‑and‑hold to speak.</p>
+<div class="stage">
+  <div class="device">
+    <div class="antenna"></div>
+    <div class="screw s1"></div><div class="screw s2"></div><div class="screw s3"></div><div class="screw s4"></div>
 
-    <div class="row">
-      <input id="roomId" placeholder="Room code (e.g., 7352)" maxlength="32" />
-      <button id="createBtn" title="Create a new room">Create</button>
-      <button id="joinBtn" title="Join an existing room">Join</button>
+    <!-- Engraving -->
+    <div class="engrave"><span>PRAGGIE-VSPx001</span></div>
+
+    <!-- Speaker / head -->
+    <div class="head">
+      <div class="grill" aria-hidden="true">
+        <div class="row">
+          <span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span>
+        </div>
+        <div class="row">
+          <span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span>
+        </div>
+      </div>
     </div>
 
-    <div class="row">
-      <input id="displayName" placeholder="Your name (optional)" />
-      <span class="pill" id="securePill">HTTPS</span>
-      <span class="pill" id="micPill">Mic: ?</span>
+    <!-- Screen -->
+    <div class="screen-wrap">
+      <div class="screen">
+        <div class="statusbar">
+          <span class="pill" id="securePill">HTTPS</span>
+          <span class="pill" id="micPill">Mic: ?</span>
+        </div>
+        <div class="lcd">
+          <div class="hint">Share a room code. One device taps <b>Create</b>, the other taps <b>Join</b>. Hold <b>TALK</b> below.</div>
+          <div class="field">
+            <input id="roomId" placeholder="Room code (e.g., 7352)" maxlength="32" />
+            <div class="softkeys">
+              <button id="createBtn" title="Create a new room">Create</button>
+              <button id="joinBtn" title="Join an existing room">Join</button>
+            </div>
+          </div>
+          <div class="field">
+            <input id="displayName" placeholder="Your name (optional)" />
+          </div>
+          <div id="status">Status: Not connected.</div>
+          <div id="who"></div>
+          <div id="errors"></div>
+        </div>
+        <div class="statusbar" style="justify-content:center; color:#9aa4b6">
+          <span style="opacity:.65">◀ MENU ▪️ SELECT ▪️ BACK ▶</span>
+        </div>
+      </div>
     </div>
 
-    <button id="pttBtn" class="ptt" disabled>
-      Hold to Talk (Spacebar)
-    </button>
-    <div class="hint">Only one side talks at a time. Release to listen.</div>
+    <!-- Bottom: Big 3D Push-To-Talk -->
+    <div class="keys">
+      <button id="pttBtn" disabled>TALK</button>
+      <div class="ptt-label">Hold to talk (Spacebar)</div>
+    </div>
 
-    <div class="status" id="status">Status: Not connected.</div>
-    <div class="status" id="who"></div>
-    <div class="status bad" id="errors"></div>
-
-    <!-- Hidden audio element to play remote audio -->
-    <audio id="remoteAudio" autoplay playsinline></audio>
-
-    <footer>Tip: Open this page on two devices. One taps “Create”, the other taps “Join” with the same room code.</footer>
+    <audio id="remoteAudio" autoplay playsinline style="display:none"></audio>
   </div>
+</div>
 </body>
 </html>
