--- a/index.html
+++ b/index.html
@@ -6,178 +6,61 @@
 <title>Walkie-Talkie</title>
 <style>
 :root{
-  --shell:#d6a500;     /* base yellow shell */
-  --shell-hi:#f1c40f;  /* highlight yellow */
-  --glass:#0f1220;     /* screen glass stays dark */
-  --screen:#0b0e19;
-  --text:#e9ecf3;
-  --muted:#9aa4b6;
-  --accent:#4cc2ff;
-  --ok:#49c56b;
-  --err:#ff8b8b;
-  --ptt:#e24646;       /* red TALK button */
-  --ptt-d:#b02f2f;
+  --shell:#d6a500; --shell-hi:#f1c40f; --glass:#0f1220; --screen:#0b0e19;
+  --text:#e9ecf3; --muted:#9aa4b6; --accent:#4cc2ff; --ok:#49c56b; --err:#ff8b8b;
+  --ptt:#e24646; --ptt-d:#b02f2f;
 }
-html,body{
-  height:100%; margin:0;
-  background:radial-gradient(1200px 800px at 70% 10%, #0a0c12 0%, #05070b 60%, #030408 100%);
-  color:var(--text);
-  font-family:system-ui,Segoe UI,Arial,sans-serif;
-}
-.stage{
-  min-height:100%;
-  display:flex; align-items:center; justify-content:center;
-  padding:24px;
-}
-/* Prevent long-press selection/callout app-wide except in inputs/textarea */
-.device, .device *:not(input):not(textarea){
-  user-select:none;
-  -webkit-user-select:none;
-  -webkit-touch-callout:none;
-}
-
-/* DEVICE SHELL */
-.device{
-  position:relative;
-  width:min(360px, 92vw);
-  aspect-ratio: 9 / 16;
-  background:linear-gradient(160deg,var(--shell-hi),var(--shell));
-  border-radius:28px;
-  box-shadow:
-    inset 0 2px 0 rgba(255,255,255,0.10),
-    inset 0 -10px 22px rgba(0,0,0,0.20),
-    0 20px 80px rgba(0,0,0,0.55);
-  border:1px solid #997a00; /* darker yellow/brown edge */
-  display:grid;
-  grid-template-rows: 74px 1fr 130px;
-  overflow:hidden;
-}
-/* Antenna */
-.antenna{
-  position:absolute; top:-42px; left:26px; width:16px; height:48px;
-  background:linear-gradient(180deg,#303645,#1e2331);
-  border-radius:8px 8px 2px 2px; border:1px solid #2a2f3f;
-  box-shadow:0 8px 16px rgba(0,0,0,0.5);
-}
-/* Speaker grill */
-.head{ position:relative; padding:14px 18px 4px 18px; }
-.grill{
-  height:42px; border-radius:10px; background:linear-gradient(180deg,#1a1e2a,#0e1017);
-  border:1px solid #1f2433; box-shadow:inset 0 -8px 16px rgba(0,0,0,0.6), inset 0 1px 0 rgba(255,255,255,.03);
-  display:grid; align-content:center; padding:0 14px; gap:6px;
-}
-.grill .row{display:flex; gap:8px}
-.grill .dot{height:4px;width:4px;background:#0b0e16;border-radius:50%;box-shadow:0 0 0 1px #121624;}
-/* Engraved badge */
-.engrave{
-  position:absolute;
-  left:0; right:0;
-  top:66px; /* just under grill */
-  display:flex; justify-content:center;
-  z-index:4;
-  pointer-events:none;
-}
-.engrave span{
-  font-weight:800; letter-spacing:2px; font-size:12px;
-  color:transparent;
-  background:linear-gradient(180deg, rgba(255,255,255,.22), rgba(0,0,0,.85));
-  -webkit-background-clip:text; background-clip:text;
-  text-shadow:
-    0 1px 0 rgba(255,255,255,0.14),
-    0 -1px 0 rgba(0,0,0,0.7);
-  filter: drop-shadow(0 1px 0 rgba(255,255,255,0.06));
-  opacity:.8;
-}
+html,body{height:100%;margin:0;background:radial-gradient(1200px 800px at 70% 10%, #0a0c12 0%, #05070b 60%, #030408 100%);color:var(--text);font-family:system-ui,Segoe UI,Arial,sans-serif;}
+.stage{min-height:100%;display:flex;align-items:center;justify-content:center;padding:24px;}
+/* Disable long-press selection except inputs/textarea */
+.device, .device *:not(input):not(textarea){user-select:none;-webkit-user-select:none;-webkit-touch-callout:none;}
+/* Device shell */
+.device{position:relative;width:min(360px,92vw);aspect-ratio:9/16;background:linear-gradient(160deg,var(--shell-hi),var(--shell));border-radius:28px;
+  box-shadow:inset 0 2px 0 rgba(255,255,255,.10), inset 0 -10px 22px rgba(0,0,0,.20), 0 20px 80px rgba(0,0,0,.55);
+  border:1px solid #997a00; display:grid; grid-template-rows:74px 1fr 130px; overflow:hidden;}
+.antenna{position:absolute;top:-42px;left:26px;width:16px;height:48px;background:linear-gradient(180deg,#303645,#1e2331);border-radius:8px 8px 2px 2px;border:1px solid #2a2f3f;box-shadow:0 8px 16px rgba(0,0,0,.5);}
+.head{position:relative;padding:14px 18px 4px 18px;}
+.grill{height:42px;border-radius:10px;background:linear-gradient(180deg,#1a1e2a,#0e1017);border:1px solid #1f2433;box-shadow:inset 0 -8px 16px rgba(0,0,0,.6), inset 0 1px 0 rgba(255,255,255,.03);
+  display:grid;align-content:center;padding:0 14px;gap:6px;}
+.grill .row{display:flex;gap:8px}.grill .dot{height:4px;width:4px;background:#0b0e16;border-radius:50%;box-shadow:0 0 0 1px #121624;}
+/* Engraving */
+.engrave{position:absolute;left:0;right:0;top:66px;display:flex;justify-content:center;z-index:4;pointer-events:none;}
+.engrave span{font-weight:800;letter-spacing:2px;font-size:12px;color:transparent;background:linear-gradient(180deg,rgba(255,255,255,.22),rgba(0,0,0,.85));
+  -webkit-background-clip:text;background-clip:text;text-shadow:0 1px 0 rgba(255,255,255,.14),0 -1px 0 rgba(0,0,0,.7);filter:drop-shadow(0 1px 0 rgba(255,255,255,.06));opacity:.8;}
 /* Screen */
 .screen-wrap{padding:10px 18px}
-.screen{
-  position:relative; height:100%;
-  background:radial-gradient(140% 120% at 50% -20%, #12162a 0%, var(--glass) 45%, #0c1022 100%);
-  border:1px solid #2a3146; border-radius:16px; overflow:hidden;
-  box-shadow:inset 0 0 40px rgba(0,0,0,.8), inset 0 1px 0 rgba(255,255,255,.04);
-  display:grid; grid-template-rows: 30px 1fr 30px;
-}
-.statusbar{
-  display:flex; align-items:center; justify-content:space-between;
-  padding:6px 10px; font-size:12px; color:#cfe3ff;
-}
-.pill{
-  display:inline-flex; align-items:center; gap:6px;
-  border:1px solid #35405b; padding:2px 8px;
-  border-radius:999px; font-size:11px;
-}
-.lcd{
-  padding:12px; display:grid; gap:10px; align-content:start; overflow:auto;
-  color:#dfe6ff; text-shadow:0 0 12px rgba(100,150,255,.12);
-  font-size:14px;
-}
-.lcd .hint{color:var(--muted); font-size:12px}
-.field{display:flex; gap:8px}
-.lcd input, .lcd button{
-  border-radius:10px; border:1px solid #35405b; background:#0e1222; color:var(--text);
-  padding:10px 12px; font-size:13px; outline:none;
-}
-.lcd input{flex:1; min-width:0}
-.lcd button{cursor:pointer}
-.lcd button:disabled{opacity:.6; cursor:not-allowed}
-.softkeys{display:flex; gap:8px}
-#status{color:#9bd; font-size:12px}
-#who{color:#cbd9ff; font-size:12px}
-#errors{color:#ff8b8b; font-size:12px}
-/* Bottom control area with big 3D PTT */
-.keys{
-  position:relative; padding:14px 18px 18px;
-  display:grid; align-items:center;
-}
-#pttBtn{
-  display:block;
-  margin:auto;
-  height:96px; width:96px;
-  border-radius:50%;
-  background: radial-gradient(circle at 30% 30%, var(--ptt), var(--ptt-d));
-  border:3px solid #6f1e1e;
-  box-shadow:
-    inset 0 4px 8px rgba(255,255,255,0.15),
-    inset 0 -8px 12px rgba(0,0,0,0.45),
-    0 10px 22px rgba(0,0,0,0.55);
-  font-weight:800; letter-spacing:.6px;
-  font-size:16px; color:#fff;
-  cursor:pointer;
-  transition:transform .08s ease, box-shadow .08s ease, background .15s ease;
-  user-select:none; -webkit-user-select:none; -webkit-touch-callout:none;
-}
-#pttBtn:active{
-  transform: translateY(2px);
-  box-shadow:
-    inset 0 2px 4px rgba(255,255,255,0.12),
-    inset 0 -4px 8px rgba(0,0,0,0.55),
-    0 4px 10px rgba(0,0,0,0.5);
-}
-#pttBtn.talking{
-  background: radial-gradient(circle at 30% 30%, #4fc463, #2c7f39);
-  border-color:#205a2b;
-  box-shadow:
-    inset 0 4px 8px rgba(255,255,255,0.15),
-    inset 0 -8px 12px rgba(0,0,0,0.45),
-    0 10px 22px rgba(73,197,107,.25);
-}
-#pttBtn:disabled{opacity:.65; cursor:not-allowed}
-.ptt-label{margin-top:8px; text-align:center; font-size:11px; color:#2a2a2a; opacity:.85}
-
-/* Screws */
-.screw{position:absolute; width:10px; height:10px; border-radius:50%; background:#0e1118; border:1px solid #2f2f2f; box-shadow:inset 0 2px 4px rgba(0,0,0,.5)}
-.s1{top:10px; left:10px} .s2{top:10px; right:10px} .s3{bottom:10px; left:10px} .s4{bottom:10px; right:10px}
-
-/* Subtle scrollbar */
-.lcd::-webkit-scrollbar{height:8px;width:8px}
-.lcd::-webkit-scrollbar-thumb{background:#2a3146;border-radius:8px}
+.screen{position:relative;height:100%;background:radial-gradient(140% 120% at 50% -20%, #12162a 0%, var(--glass) 45%, #0c1022 100%);border:1px solid #2a3146;border-radius:16px;overflow:hidden;
+  box-shadow:inset 0 0 40px rgba(0,0,0,.8), inset 0 1px 0 rgba(255,255,255,.04);display:grid;grid-template-rows:30px 1fr 30px;}
+.statusbar{display:flex;align-items:center;justify-content:space-between;padding:6px 10px;font-size:12px;color:#cfe3ff;}
+.pill{display:inline-flex;align-items:center;gap:6px;border:1px solid #35405b;padding:2px 8px;border-radius:999px;font-size:11px;}
+.lcd{padding:12px;display:grid;gap:10px;align-content:start;overflow:auto;color:#dfe6ff;text-shadow:0 0 12px rgba(100,150,255,.12);font-size:14px;}
+.lcd .hint{color:var(--muted);font-size:12px}
+.field{display:flex;gap:8px}
+.lcd input,.lcd button{border-radius:10px;border:1px solid #35405b;background:#0e1222;color:var(--text);padding:10px 12px;font-size:13px;outline:none;}
+.lcd input{flex:1;min-width:0}.lcd button{cursor:pointer}.lcd button:disabled{opacity:.6;cursor:not-allowed}
+.softkeys{display:flex;gap:8px}
+#status{color:#9bd;font-size:12px}#who{color:#cbd9ff;font-size:12px}#errors{color:#ff8b8b;font-size:12px}
+/* Bottom PTT */
+.keys{position:relative;padding:14px 18px 18px;display:grid;align-items:center;}
+#pttBtn{display:block;margin:auto;height:96px;width:96px;border-radius:50%;background:radial-gradient(circle at 30% 30%,var(--ptt),var(--ptt-d));
+  border:3px solid #6f1e1e;box-shadow:inset 0 4px 8px rgba(255,255,255,.15), inset 0 -8px 12px rgba(0,0,0,.45), 0 10px 22px rgba(0,0,0,.55);
+  font-weight:800;letter-spacing:.6px;font-size:16px;color:#fff;cursor:pointer;transition:transform .08s ease, box-shadow .08s ease, background .15s ease;
+  user-select:none;-webkit-user-select:none;-webkit-touch-callout:none;}
+#pttBtn:active{transform:translateY(2px);box-shadow:inset 0 2px 4px rgba(255,255,255,.12), inset 0 -4px 8px rgba(0,0,0,.55), 0 4px 10px rgba(0,0,0,.5);}
+#pttBtn.talking{background:radial-gradient(circle at 30% 30%,#4fc463,#2c7f39);border-color:#205a2b;box-shadow:inset 0 4px 8px rgba(255,255,255,.15), inset 0 -8px 12px rgba(0,0,0,.45), 0 10px 22px rgba(73,197,107,.25);}
+#pttBtn:disabled{opacity:.65;cursor:not-allowed}
+.ptt-label{margin-top:8px;text-align:center;font-size:11px;color:#2a2a2a;opacity:.85}
+.screw{position:absolute;width:10px;height:10px;border-radius:50%;background:#0e1118;border:1px solid #2f2f2f;box-shadow:inset 0 2px 4px rgba(0,0,0,.5)}
+.s1{top:10px;left:10px}.s2{top:10px;right:10px}.s3{bottom:10px;left:10px}.s4{bottom:10px;right:10px}
+.lcd::-webkit-scrollbar{height:8px;width:8px}.lcd::-webkit-scrollbar-thumb{background:#2a3146;border-radius:8px}
 </style>
 
 <!-- Firebase SDKs -->
 <script defer src="https://www.gstatic.com/firebasejs/10.12.3/firebase-app-compat.js"></script>
 <script defer src="https://www.gstatic.com/firebasejs/10.12.3/firebase-firestore-compat.js"></script>
 <script defer src="./firebase-config.js"></script>
-<script defer src="./app.js"></script>
+<!-- cache-busted app script -->
+<script defer src="./app.js?v=2"></script>
 </head>
 <body>
 <div class="stage">
@@ -233,9 +116,8 @@ html,body{
     <div class="keys">
       <button id="pttBtn" disabled oncontextmenu="return false;">TALK</button>
       <div class="ptt-label">Hold to talk (Spacebar)</div>
+      <audio id="remoteAudio" autoplay playsinline style="display:none"></audio>
     </div>
-
-    <audio id="remoteAudio" autoplay playsinline style="display:none"></audio>
   </div>
 </div>
 </body>
