--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 }
 html,body{height:100%;margin:0;background:radial-gradient(1200px 800px at 70% 10%, #0a0c12 0%, #05070b 60%, #030408 100%);color:var(--text);font-family:system-ui,Segoe UI,Arial,sans-serif;}
 .stage{min-height:100%;display:flex;align-items:center;justify-content:center;padding:24px;}
-/* Disable long-press selection except inputs/textarea */
-.device, .device *:not(input):not(textarea){user-select:none;-webkit-user-select:none;-webkit-touch-callout:none;}
+/* Disable long-press selection app-wide except in inputs/textarea/buttons */
+.device, .device *:not(input):not(textarea):not(button){user-select:none;-webkit-user-select:none;-webkit-touch-callout:none;}
+
 /* Device shell */
 .device{position:relative;width:min(360px,92vw);aspect-ratio:9/16;background:linear-gradient(160deg,var(--shell-hi),var(--shell));border-radius:28px;
   box-shadow:inset 0 2px 0 rgba(255,255,255,.10), inset 0 -10px 22px rgba(0,0,0,.20), 0 20px 80px rgba(0,0,0,.55);
@@ -45,7 +46,7 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px 800px at 70% 10
 #pttBtn{display:block;margin:auto;height:96px;width:96px;border-radius:50%;background:radial-gradient(circle at 30% 30%,var(--ptt),var(--ptt-d));
   border:3px solid #6f1e1e;box-shadow:inset 0 4px 8px rgba(255,255,255,.15), inset 0 -8px 12px rgba(0,0,0,.45), 0 10px 22px rgba(0,0,0,.55);
   font-weight:800;letter-spacing:.6px;font-size:16px;color:#fff;cursor:pointer;transition:transform .08s ease, box-shadow .08s ease, background .15s ease;
-  user-select:none;-webkit-user-select:none;-webkit-touch-callout:none;}
+  user-select:none;-webkit-user-select:none;-webkit-touch-callout:none;touch-action:none;}
 #pttBtn:active{transform:translateY(2px);box-shadow:inset 0 2px 4px rgba(255,255,255,.12), inset 0 -4px 8px rgba(0,0,0,.55), 0 4px 10px rgba(0,0,0,.5);}
 #pttBtn.talking{background:radial-gradient(circle at 30% 30%,#4fc463,#2c7f39);border-color:#205a2b;box-shadow:inset 0 4px 8px rgba(255,255,255,.15), inset 0 -8px 12px rgba(0,0,0,.45), 0 10px 22px rgba(73,197,107,.25);}
 #pttBtn:disabled{opacity:.65;cursor:not-allowed}
@@ -60,7 +61,7 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px 800px at 70% 10
 <script defer src="https://www.gstatic.com/firebasejs/10.12.3/firebase-firestore-compat.js"></script>
 <script defer src="./firebase-config.js"></script>
 <!-- cache-busted app script -->
-<script defer src="./app.js?v=2"></script>
+<script defer src="./app.js?v=3"></script>
 </head>
 <body>
 <div class="stage">
