--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px 800px at 70% 10
   border:1px solid #997a00; display:grid; grid-template-rows:74px 1fr 130px; overflow:hidden;}
 .antenna{position:absolute;top:-42px;left:26px;width:16px;height:48px;background:linear-gradient(180deg,#303645,#1e2331);border-radius:8px 8px 2px 2px;border:1px solid #2a2f3f;box-shadow:0 8px 16px rgba(0,0,0,.5);}
 .head{position:relative;padding:14px 18px 4px 18px;}
-.grill{height:42px;border-radius:10px;background:linear-gradient(180deg,#1a1e2a,#0e1017);border:1px solid #1f2433;box-shadow:inset 0 -8px 16px rgba(0,0,0,.6), inset 0 1px 0 rgba(255,255,255,.03);
+.grill{height:42px;border-radius:10px;background:linear-gradient(180deg,#1a1e2a,#0e1017);border:1px solid #1f2433;box-shadow:inset 0 -8px 16px rgba(0,0,0,0.6), inset 0 1px 0 rgba(255,255,255,.03);
   display:grid;align-content:center;padding:0 14px;gap:6px;}
 .grill .row{display:flex;gap:8px}.grill .dot{height:4px;width:4px;background:#0b0e16;border-radius:50%;box-shadow:0 0 0 1px #121624;}
 /* Engraving */
@@ -40,7 +40,9 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px 800px at 70% 10
 .lcd input,.lcd button{border-radius:10px;border:1px solid #35405b;background:#0e1222;color:var(--text);padding:10px 12px;font-size:13px;outline:none;}
 .lcd input{flex:1;min-width:0}.lcd button{cursor:pointer}.lcd button:disabled{opacity:.6;cursor:not-allowed}
 .softkeys{display:flex;gap:8px}
-#status{color:#9bd;font-size:12px}#who{color:#cbd9ff;font-size:12px}#errors{color:#ff8b8b;font-size:12px}
+#status{color:#9bd;font-size:12px}
+#party{color:#cbd9ff;font-size:12px}
+#errors{color:#ff8b8b;font-size:12px}
 /* Bottom PTT */
 .keys{position:relative;padding:14px 18px 18px;display:grid;align-items:center;}
 #pttBtn{display:block;margin:auto;height:96px;width:96px;border-radius:50%;background:radial-gradient(circle at 30% 30%,var(--ptt),var(--ptt-d));
@@ -61,7 +63,7 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px 800px at 70% 10
 <script defer src="https://www.gstatic.com/firebasejs/10.12.3/firebase-firestore-compat.js"></script>
 <script defer src="./firebase-config.js"></script>
 <!-- cache-busted app script -->
-<script defer src="./app.js?v=3"></script>
+<script defer src="./app.js?v=4"></script>
 </head>
 <body>
 <div class="stage">
@@ -103,8 +105,9 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px 800px at 70% 10
           <div class="field">
             <input id="displayName" placeholder="Your name (optional)" />
           </div>
+
           <div id="status">Status: Not connected.</div>
-          <div id="who"></div>
+          <div id="party">In room: —</div>
           <div id="errors"></div>
         </div>
         <div class="statusbar" style="justify-content:center; color:#9aa4b6">
