--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
 }
 html,body{height:100%;margin:0;background:radial-gradient(1200px 800px at 70% 10%, #0a0c12 0%, #05070b 60%, #030408 100%);color:var(--text);font-family:system-ui,Segoe UI,Arial,sans-serif;}
 .stage{min-height:100%;display:flex;align-items:center;justify-content:center;padding:24px;}
-/* Disable long-press selection app-wide except in inputs/textarea/buttons */
 .device, .device *:not(input):not(textarea):not(button){user-select:none;-webkit-user-select:none;-webkit-touch-callout:none;}
-
-/* Device shell */
 .device{position:relative;width:min(360px,92vw);aspect-ratio:9/16;background:linear-gradient(160deg,var(--shell-hi),var(--shell));border-radius:28px;
   box-shadow:inset 0 2px 0 rgba(255,255,255,.10), inset 0 -10px 22px rgba(0,0,0,.20), 0 20px 80px rgba(0,0,0,.55);
   border:1px solid #997a00; display:grid; grid-template-rows:74px 1fr 130px; overflow:hidden;}
@@ -24,11 +21,9 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px 800px at 70% 10
 .grill{height:42px;border-radius:10px;background:linear-gradient(180deg,#1a1e2a,#0e1017);border:1px solid #1f2433;box-shadow:inset 0 -8px 16px rgba(0,0,0,0.6), inset 0 1px 0 rgba(255,255,255,.03);
   display:grid;align-content:center;padding:0 14px;gap:6px;}
 .grill .row{display:flex;gap:8px}.grill .dot{height:4px;width:4px;background:#0b0e16;border-radius:50%;box-shadow:0 0 0 1px #121624;}
-/* Engraving */
 .engrave{position:absolute;left:0;right:0;top:66px;display:flex;justify-content:center;z-index:4;pointer-events:none;}
 .engrave span{font-weight:800;letter-spacing:2px;font-size:12px;color:transparent;background:linear-gradient(180deg,rgba(255,255,255,.22),rgba(0,0,0,.85));
   -webkit-background-clip:text;background-clip:text;text-shadow:0 1px 0 rgba(255,255,255,.14),0 -1px 0 rgba(0,0,0,.7);filter:drop-shadow(0 1px 0 rgba(255,255,255,.06));opacity:.8;}
-/* Screen */
 .screen-wrap{padding:10px 18px}
 .screen{position:relative;height:100%;background:radial-gradient(140% 120% at 50% -20%, #12162a 0%, var(--glass) 45%, #0c1022 100%);border:1px solid #2a3146;border-radius:16px;overflow:hidden;
   box-shadow:inset 0 0 40px rgba(0,0,0,.8), inset 0 1px 0 rgba(255,255,255,.04);display:grid;grid-template-rows:30px 1fr 30px;}
@@ -41,9 +36,10 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px 800px at 70% 10
 .lcd input{flex:1;min-width:0}.lcd button{cursor:pointer}.lcd button:disabled{opacity:.6;cursor:not-allowed}
 .softkeys{display:flex;gap:8px}
 #status{color:#9bd;font-size:12px}
-#party{color:#cbd9ff;font-size:12px}
+#partyWrap{display:flex;flex-direction:column;gap:6px}
+#partyCount{color:#cfe3ff;font-size:12px}
+#partyList{color:#cbd9ff;font-size:12px}
 #errors{color:#ff8b8b;font-size:12px}
-/* Bottom PTT */
 .keys{position:relative;padding:14px 18px 18px;display:grid;align-items:center;}
 #pttBtn{display:block;margin:auto;height:96px;width:96px;border-radius:50%;background:radial-gradient(circle at 30% 30%,var(--ptt),var(--ptt-d));
   border:3px solid #6f1e1e;box-shadow:inset 0 4px 8px rgba(255,255,255,.15), inset 0 -8px 12px rgba(0,0,0,.45), 0 10px 22px rgba(0,0,0,.55);
@@ -58,23 +54,18 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px 800px at 70% 10
 .lcd::-webkit-scrollbar{height:8px;width:8px}.lcd::-webkit-scrollbar-thumb{background:#2a3146;border-radius:8px}
 </style>
 
-<!-- Firebase SDKs -->
 <script defer src="https://www.gstatic.com/firebasejs/10.12.3/firebase-app-compat.js"></script>
 <script defer src="https://www.gstatic.com/firebasejs/10.12.3/firebase-firestore-compat.js"></script>
 <script defer src="./firebase-config.js"></script>
-<!-- cache-busted app script -->
-<script defer src="./app.js?v=4"></script>
+<script defer src="./app.js?v=5"></script>
 </head>
 <body>
 <div class="stage">
   <div class="device">
     <div class="antenna"></div>
     <div class="screw s1"></div><div class="screw s2"></div><div class="screw s3"></div><div class="screw s4"></div>
-
-    <!-- Engraving -->
     <div class="engrave"><span>PRAGGIE-VSPx001</span></div>
 
-    <!-- Speaker / head -->
     <div class="head">
       <div class="grill" aria-hidden="true">
         <div class="row">
@@ -86,7 +77,6 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px 800px at 70% 10
       </div>
     </div>
 
-    <!-- Screen -->
     <div class="screen-wrap">
       <div class="screen">
         <div class="statusbar">
@@ -95,6 +85,7 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px 800px at 70% 10
         </div>
         <div class="lcd">
           <div class="hint">Share a room code. One device taps <b>Create</b>, the other taps <b>Join</b>. Hold <b>TALK</b> below.</div>
+
           <div class="field">
             <input id="roomId" placeholder="Room code (e.g., 7352)" maxlength="32" />
             <div class="softkeys">
@@ -102,21 +93,28 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px 800px at 70% 10
               <button id="joinBtn" title="Join an existing room">Join</button>
             </div>
           </div>
+
           <div class="field">
             <input id="displayName" placeholder="Your name (optional)" />
           </div>
 
           <div id="status">Status: Not connected.</div>
-          <div id="party">In room: —</div>
+
+          <!-- Presence panel (mandatory, real-time) -->
+          <div id="partyWrap">
+            <div id="partyCount">In room: 0</div>
+            <div id="partyList">—</div>
+          </div>
+
           <div id="errors"></div>
         </div>
+
         <div class="statusbar" style="justify-content:center; color:#9aa4b6">
           <span style="opacity:.65">◀ MENU ▪️ SELECT ▪️ BACK ▶</span>
         </div>
       </div>
     </div>
 
-    <!-- Bottom: Big 3D Push-To-Talk -->
     <div class="keys">
       <button id="pttBtn" disabled oncontextmenu="return false;">TALK</button>
       <div class="ptt-label">Hold to talk (Spacebar)</div>
