--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px circle at 10% 1
 .sectionTitle{font-weight:700;letter-spacing:.4px}
 .hint{color:var(--muted);font-size:12px}
 .field{display:flex;gap:8px}
-.input,.btn,.select{border-radius:10px;border:1px solid var(--line);background:#0c1121;color:var(--text);padding:10px 12px;font-size:13px;outline:none;}
+.input,.btn,.select{border-radius:10px;border:1px solid var(--line);background:#0c1121;color:#var(--text);padding:10px 12px;font-size:13px;outline:none;}
 .input{flex:1;min-width:0}
 .btn{cursor:pointer}.btn:disabled{opacity:.6;cursor:not-allowed}
 .badge{display:inline-block;border:1px solid var(--line);border-radius:999px;padding:2px 8px;font-size:11px;background:#0c1121;color:#cfe3ff}
@@ -90,10 +90,10 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px circle at 10% 1
           <span class="pill">User: <span id="userPill">—</span></span>
         </div>
 
-        <!-- LCD CONTENT (pages) -->
+        <!-- LCD -->
         <div class="lcd" id="lcd">
 
-          <!-- AUTH PAGE -->
+          <!-- AUTH -->
           <div id="page-auth">
             <div class="sectionTitle">Sign in</div>
             <div class="hint">Your numeric ID is auto-generated after signup.</div>
@@ -119,6 +119,7 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px circle at 10% 1
           <div id="page-friends" style="display:none">
             <div class="sectionTitle">Friends</div>
 
+            <!-- NEW: show your ID -->
             <div class="badge" id="myIdBadge" style="margin-top:4px">Your ID: —</div>
 
             <div class="badge" style="margin-top:10px">Add friend by ID</div>
