--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px circle at 10% 1
 .sectionTitle{font-weight:700;letter-spacing:.4px}
 .hint{color:var(--muted);font-size:12px}
 .field{display:flex;gap:8px}
-.input,.btn,.select{border-radius:10px;border:1px solid var(--line);background:#0c1121;color:#var(--text);padding:10px 12px;font-size:13px;outline:none;}
+.input,.btn,.select{border-radius:10px;border:1px solid var(--line);background:#0c1121;color:var(--text);padding:10px 12px;font-size:13px;outline:none;}
 .input{flex:1;min-width:0}
 .btn{cursor:pointer}.btn:disabled{opacity:.6;cursor:not-allowed}
 .badge{display:inline-block;border:1px solid var(--line);border-radius:999px;padding:2px 8px;font-size:11px;background:#0c1121;color:#cfe3ff}
@@ -192,3 +192,4 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px circle at 10% 1
 
 </body>
 </html>
+
