--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ html,body{height:100%;margin:0;background:radial-gradient(1200px circle at 10% 1
 <!-- Firebase SDKs -->
 <script defer src="https://www.gstatic.com/firebasejs/10.12.3/firebase-app-compat.js"></script>
 <script defer src="https://www.gstatic.com/firebasejs/10.12.3/firebase-auth-compat.js"></script>
-script defer src="https://www.gstatic.com/firebasejs/10.12.3/firebase-firestore-compat.js"></script>
+<script defer src="https://www.gstatic.com/firebasejs/10.12.3/firebase-firestore-compat.js"></script>
 <script defer src="https://www.gstatic.com/firebasejs/10.12.3/firebase-database-compat.js"></script>
 <script defer src="https://www.gstatic.com/firebasejs/10.12.3/firebase-functions-compat.js"></script>
 
@@ -265,3 +265,4 @@ script defer src="https://www.gstatic.com/firebasejs/10.12.3/firebase-firestore-
 
 </body>
 </html>
+
